# ContinuousDeliveryAPI

./: .gitignore  CMakeLists.txt  ContinuousDeliveryAPI.sln  Dockerfile  README.md  vcpkg.json
CMake/: Filters.cmake
ContinuousDeliveryAPI/: CMakeLists.txt  ContinuousDeliveryAPI.vcxproj  ContinuousDeliveryAPI.vcxproj.filters  DeliveryServer.cpp  DeliveryServer.h  PackageCollector.cpp
ContinuousDeliveryAPI/src/Server/: DeliveryServer.cpp  DeliveryServer.h  PackageCollector.cpp  PackageCollector.h  main.cpp
ContinuousDeliveryClient/: CMakeLists.txt  ContinuousDeliveryClient.vcxproj  ContinuousDeliveryClient.vcxproj.filters  main.cpp
ContinuousDeliveryClient/src/Client/: main.cpp
FileHashes/: CMakeLists.txt  FileHashes.cpp  FileHashes.h  FileHashes.vcxproj  FileHashes.vcxproj.filters
FileHashes/src/FileHashes/: FileHashes.cpp
